[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "csvalchemy"
version = "0.0.2"
description = "CSV ORM: Read, Validate, Update, and Write CSV files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.9.2",
    "dydactic>=0.1.2"
]
license = {text = "MIT License"}
keywords = ["csv", "validation", "orm", "model"]

[tool.setuptools.packages]
find = {}